# Engine

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/: Application.cpp  Application.h  Engine.h
Engine/src/Debug/: Debug.h
Engine/src/Systems/: System.cpp  System.h
Engine/src/Systems/EventSystem/: Event.h  EventMacros.h  EventSystem.cpp  EventSystem.h  Events.h  WindowCloseEvent.h
Engine/src/Systems/EventSystem/Events/: Events.h  WindowCloseEvent.h
Engine/src/Systems/LogSystem/: LogMacros.h  LogSystem.cpp  LogSystem.h  LogSystemAdapter.cpp  LogSystemAdapter.h
Engine/src/Window/: Window.cpp  Window.h
Engine/src/Window/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
User/: CMakeLists.txt
User/src/: main.cpp
